syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.admin;

import "DistLedgerCommonDefinitions.proto";

// Administrator Interface of the DistLedger Service

message ActivateRequest {} // TODO

message ActivateResponse {} // TODO

message DeactivateRequest {} // TODO

message DeactivateResponse {} // TODO

message GossipRequest {}

message GossipResponse {}

message getLedgerStateRequest {} // TODO

message getLedgerStateResponse {
  LedgerState ledgerState = 1;
}

service AdminService {
  rpc activate(ActivateRequest) returns (ActivateResponse);
  rpc deactivate(DeactivateRequest) returns (DeactivateResponse);
  rpc gossip(GossipRequest) returns (GossipResponse);
  rpc getLedgerState(getLedgerStateRequest) returns (getLedgerStateResponse);
}
